# Spatial

./: .gitattributes  .gitignore  AGENTS.md  CONTRIBUTING.md  LICENSE  PLUSH_RECONSTRUCTION.md  README.md  SECURITY.md  SHAPE_ROUTER.md  pyproject.toml  sample_prompts.json
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml
board/: charuco_board.json
docs/: CAPTURE.md  DETERMINISM.md  MAC_VIDEO_DEPTH.md  OSS_RESEARCH.md
examples/: parametric_phone.json
models/: shape_router_v2.json  shape_router_v3.json
native/ObjectCaptureCLI/: .gitignore  Package.swift  README.md
native/ObjectCaptureCLI/Sources/: CLI.swift  main.swift
native/ObjectCaptureCLI/Tests/: CLITests.swift
native/VisionClassifyCLI/: Package.swift  README.md
native/VisionClassifyCLI/Sources/: CLI.swift  ImageSupport.swift  SemanticMapping.swift  main.swift
native/VisionClassifyCLI/Tests/: SemanticMappingTests.swift
native/VisionMaskCLI/: Package.swift  README.md
native/VisionMaskCLI/Sources/: CLI.swift  ImageSupport.swift  MaskGenerator.swift  MaskMath.swift  Validation.swift  main.swift
native/VisionMaskCLI/Tests/: MaskMathTests.swift
requirements/: reference.txt
scripts/: audit_texture_videos.py  auto_masks.py  bake_texture.py  build_parametric_asset.py  build_soft_parts_asset.py  build_textured_soft_parts_asset.py  build_visual_hull.py  compare_depth_backends.py  depth_pro_batch.py  depth_relief.py  isolate_views.py  make_charuco_board.py  make_demo_inputs.py  make_seeded_color_masks.py  masked_sfm_hull.py  prepare_orbit_masks.py  reconstruct_object.py  render_usda_mesh.py  run_hunyuan_local.py  select_board_frames.py  shape_router.py
src/local3d/: __init__.py  auto_parametric.py  auto_soft.py  backends.py  charuco_pose.py  cli.py  core.py  depth_backends.py  depth_consistency.py  fusion.py  gltf_texture.py  ingest.py  mask_clean.py  masking.py  mesh_post.py  monodepth.py  parametric_assets.py  pose_complete.py  qa_render.py  recon_common.py  reconstruction_gate.py  sfm_video.py  shape_router.py  soft_parts.py  source_guard.py  texture_bake.py  texturing.py  turntable_pose.py  usdz_pack.py  visual_hull.py
tests/: test_auto_soft.py  test_charuco_pose.py  test_compare_depth_backends.py  test_core.py  test_depth_backends.py  test_depth_consistency.py  test_fusion.py  test_hybrid_orchestration.py  test_ingest.py  test_mask_clean.py  test_masking.py  test_mesh_post.py  test_monodepth.py  test_parametric_assets.py  test_pose_complete.py  test_qa_render.py  test_reconstruction_gate.py  test_reconstruction_qa.py  test_sfm_tracks.py  test_sfm_video.py  test_shape_router.py  test_soft_parts.py  test_source_guard.py  test_texture_bake.py  test_texturing.py  test_turntable_pose.py  test_usdz_pack.py  test_visual_hull.py
