[build-system]
requires = ["setuptools>=77"]
build-backend = "setuptools.build_meta"

[project]
name = "spatial-local3d"
version = "0.1.0"
description = "Local-first, deterministic building blocks for reviewed video-to-3D workflows"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
license-files = ["LICENSE"]
authors = [{name = "JustinGamer191"}]
keywords = ["3d", "glb", "usdz", "computer-vision", "photogrammetry", "reconstruction"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
]
dependencies = [
  "numpy>=1.26,<3",
  "opencv-python-headless>=4.9,<5",
  "Pillow>=10,<13",
  "manifold3d>=3.5,<4",
  "trimesh>=4,<5",
  "scikit-image>=0.22,<1",
]

[project.optional-dependencies]
dev = ["pytest>=8,<10", "ruff>=0.15,<1", "mypy>=2,<3"]
segmentation = ["rembg>=2,<3", "onnxruntime>=1.20,<2", "scipy>=1.11,<2"]
mesh = ["fast-simplification>=0.1.13,<1", "manifold3d>=3,<4"]
sfm = ["pycolmap>=4.1,<5", "scipy>=1.11,<2"]
video = [
  "rembg>=2,<3",
  "onnxruntime>=1.20,<2",
  "scipy>=1.11,<2",
  "fast-simplification>=0.1.13,<1",
  "pycolmap>=4.1,<5",
]

[project.scripts]
spatial-local3d = "local3d.cli:main"
spatial-ingest = "local3d.ingest:main"
spatial-parametric = "local3d.parametric_assets:main"
spatial-shape-router = "local3d.shape_router:main"

[project.urls]
Homepage = "https://github.com/JustinGamer191/Spatial"
Issues = "https://github.com/JustinGamer191/Spatial/issues"

[tool.setuptools.packages.find]
where = ["src"]
include = ["local3d*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src", "."]
addopts = "-ra"

[tool.ruff]
line-length = 120

[tool.ruff.lint.per-file-ignores]
# Tests and scripts bootstrap sys.path before importing local3d.
"tests/*" = ["E402"]
"scripts/*" = ["E402"]

[tool.mypy]
python_version = "3.10"
ignore_missing_imports = true

# Baseline adoption: these modules predate type checking and currently fail on
# strict numpy/OpenCV signatures. Trim this list as modules get cleaned up.
[[tool.mypy.overrides]]
module = [
  "local3d.auto_parametric",
  "local3d.auto_soft",
  "local3d.charuco_pose",
  "local3d.core",
  "local3d.depth_backends",
  "local3d.depth_consistency",
  "local3d.fusion",
  "local3d.ingest",
  "local3d.mask_clean",
  "local3d.masking",
  "local3d.monodepth",
  "local3d.parametric_assets",
  "local3d.pose_complete",
  "local3d.qa_render",
  "local3d.reconstruction_gate",
  "local3d.sfm_video",
  "local3d.shape_router",
  "local3d.source_guard",
  "local3d.texture_bake",
  "local3d.texturing",
  "local3d.turntable_pose",
]
ignore_errors = true
